	* reject cached association validation if expiry is in past

0.11:
	* document common error codes from claimed_identity, and
	  cleanup some error handling/codes

	* support openid.mode=cancel

	* respect replace_after and expiry.  do clock compensation
	  between local clock and server.

	* invalidate_handle support

0.10:
        * handle openid.delegate properly (was losing state because I'd
	  put a URL parameter onto the wrong URL)

	* copy all signed parameters into POST args in dumb mode,
	  not a static set (to be future-proof)

0.09:
        * switch to DH/HMAC protocol, not DSA protocol

0.08:
	* more openssl-binary temp file changes.  on second failure (which
	  was previously missing a new method), it also propogates up the
	  error message now, instead of dying, to be more consistent with
	  the other DSA checkers, which never die

0.07:
	* bugfix: use URI::Fetch 0.02, not "0.02" in quotes

	* bugfix: don't set cache if no cache

0.06:
	* wrap Crypt::OpenSSL::DSA verify in eval {} as it can croak

	* use URI::Fetch, which does caching and proper HTTP behavior

	* let user get/set cache, which is then propogated down to URI::Fetch

	* optionally use new pure-perl version of Crypt::DSA which now
	  does ASN.1 serialization/deserialization in both signatures and
	  public keys.  brings total options of DSA verify techniques up
	  to 3.

	* tmpdir option (and smart auto-configuration) for people using
  	  OpenSSL binaries to verify signatures.

	* security fix when doing DSA checks with system openssl binary
	  (was previously parsing the wrong status)

	* misc reported bugfixes

0.05:
        * stupid push_url_arg bugfix

	* doc fix in example code (no post_grant in check_url)

0.04:
        * tons more docs:  in both ClaimedIdentity and VerifiedIdentity

	* Consumer now observes atom/rss/foaf/foafmaker at the same time
	  as openid.server, and passes it along to VerifiedIdentity,
	  where it's accessible, and VerifiedIdentity knows whether or